[package]
name = "dff-meta"
version = "0.1.0"
authors = ["clone206"]
edition = "2024"
description = "DFF (DSDIFF File) metadata support for Rust"
homepage = "https://github.com/clone206/dff"
repository = "https://github.com/clone206/dff"
keywords = ["audio", "dsd", "dff", "dsdiff"]
categories = ["multimedia::audio"]
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = [
    ".gitignore",
    "TODO.md"
]

[dependencies]
id3 = "1.0.2"
